--- a/thesis/appendices/protocol/finalprotocol.tex
+++ b/thesis/appendices/protocol/finalprotocol.tex
@@ -114,10 +114,10 @@ After the inclusion criteria filtering, we had 42 sources to related literature,
 \section{Quality Criteria} 
 
 \begin{enumerate}
-\item How relevant is it?
+\item \label{itm:qa1}How relevant is it?
 \begin{enumerate}
-\item Is the problem of the research a vehicle routing problem?
-\item Is swarm intelligence the main optimization method? 
+\item \label{itm:qa1a}Is the problem of the research a vehicle routing problem?
+\item \label{itm:qa1b}Is swarm intelligence the main optimization method? 
 \end{enumerate}
 \item Is there is a clear statement of the aim of the research?
 \item Is the study put into context of other studies and research?
