--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -86,9 +86,9 @@
     \hline
     7 & 50 & \textbf{1} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.6 & 12.2 & 13.0 & -231.0 & -160.5 & -231.0  \\
     ~ & 50 & \textbf{10} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.6 & 12.4 & -220.8 & -247.0 & -164.0  \\
-    ~ & 50 & \textbf{25} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.5 & 12.4 & -259.0 & -243.1 & -224.0  \\
+   % ~ & 50 & \textbf{25} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.5 & 12.4 & -259.0 & -243.1 & -224.0  \\
     ~ & 50 & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & 50 & \textbf{75} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.8 & -257.0 & -257.4 & -238.0  \\
+    %~ & 50 & \textbf{75} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.8 & -247.3 & -257.4 & -238.0  \\
     ~ & 50 & \textbf{100} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -262.0 & -253.3 & -246.0  \\
     ~ & 50 & \textbf{125} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% &  & ~ & ~ & ~ & ~ & ~  \\
     ~ & 50 & \textbf{150} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.6 & -265.0 & -254.9 & -246.0  \\
@@ -172,11 +172,11 @@
     \hline
     7 & 50 & \textbf{1} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.6 & 12.2 & 13.0 & -231.0 & -160.5 & -231.0  \\
     ~ & 50 & \textbf{10} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.6 & 12.4 & -220.8 & -247.0 & -164.0  \\
-    ~ & 50 & \textbf{25} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.5 & 12.4 & -259.0 & -243.1 & -224.0  \\
+   % ~ & 50 & \textbf{25} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.5 & 12.4 & -259.0 & -243.1 & -224.0  \\
     ~ & 50 & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & 50 & \textbf{75} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.8 & -257.0 & -257.4 & -238.0  \\
+    %~ & 50 & \textbf{75} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.8 & -257.0 & -247.3 & -238.0  \\
     ~ & 50 & \textbf{100} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -262.0 & -253.3 & -246.0  \\
-    ~ & 50 & \textbf{125} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% &  & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & \textbf{125} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & \textbf{11.1} & \textbf{11.2} & \textbf{11.6} & \textbf{-265.0} & \textbf{-254.9} & \textbf{-246.0}  \\
     ~ & 50 & \textbf{150} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.6 & -265.0 & -254.9 & -246.0  \\
     ~ & 50 & \textbf{200} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.4 & -262.0 & -253.7 & -247.0  \\
     \hline
