--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,11 @@
+@article{cohen88,
+    author    = "Paul R. Cohen and Adele E. Howe",
+    title     = "How Evaluation Guides AI Research",
+    journal   = "AI Magazine Volume 9 Number 4",
+    pages     = "35-43",
+    year      = "1988",
+}
+
 @book{bruggen14,
     author    = "Rik Van Bruggen",
     title     = "Learning Neo4j",
