--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -117,46 +117,16 @@
  	\hline
  	~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ & $FA$ & $CA$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
  	\hline
-    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -256.0 & -250.9 & -241.0  \\
-    ~ & 50 & 50 & \textbf{10\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & \textbf{10.9} & \textbf{11.2} & \textbf{11.5} & \textbf{-261.0} & \textbf{-251.1} & \textbf{-243.0} \\
-    ~ & 50 & 50 & \textbf{50\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.7 & -265.0 & -247.4 & -235.0  \\
-    ~ & 50 & 50 & \textbf{90\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.5 & 12.2 & -257.0 & -245.5 & -238.0  \\
-    ~ & 50 & 50 & \textbf{99\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.6 & -257.0 & -247.2 & -239.0  \\
-    \hline
-    2 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.05} & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.6 & -251.0 & -243.7 & -235.0 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.1} & 10\% & 10\% & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
-    ~ & 50 & 50 & 10\% & \textbf{0.1} & \textbf{0.5} & 10\% & 10\% & 10\% & 11.0 & 11.2 & 11.7 & -261.0 & -248.0 & -235.0 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.5 & -261.0 & -251.1 & -243.0 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.4 & 11.9 & -255.0 & -244.7 & -237.0 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.9 & -261.0 & -248.1 & -230.0 \\
-    \hline
-    3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & 11.1 & 11.3 & 11.5 & -254.0 & -247.3 & -243.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -263.0 & -250.4 & -245.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & 11.0 & 11.3 & 11.6 & -256.0 & -247.8 & -35.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & 11.1 & 11.4 & 11.7 & -257.0 & -248.6 & -240.0 \\
-    
-    %\hline
-    %Bonus round$^i$ 1& 50 & 50 & \textbf{1\%} & \textbf{0.5} & \textbf{0.5} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 10.9 & 11.3 & 11.5 & -250.0 & -245.6 & -237.0 \\
-    %Bonus round$^i$ 2& 50 & 50 & \textbf{10\%} & \textbf{0.01} & \textbf{0.25} & \textbf{25\%} & \textbf{50\%} & \textbf{5\%} & 11.0 & 11.3 & 12.0 & -258.0 & -247.9 & -234.0 \\
+    1 & 50 & 50 & \textbf{1\%} & 0.5 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
 
     \hline
-    4 & \textbf{10$^*$} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & - & - & - & - & - & - \\
-    ~ & \textbf{25} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -252.0 & -242.1 & -232.0 \\
-    ~ & \textbf{50} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    ~ & \textbf{100} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.4 & -249.4 & -249.4 & -245.0 \\
-    ~ & \textbf{150} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.6 & -261.0 & -252.4 & -242.0 \\
-    ~ & \textbf{200} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.4 & -263.0 & -253.6 & -246.0 \\
+    2 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.05} & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
-    5 & 50 & \textbf{1} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.6 & 12.2 & 13.0 & -231.0 & -160.5 & -231.0  \\
-    ~ & 50 & \textbf{10} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.0 & 11.6 & 12.4 & -220.8 & -247.0 & -164.0  \\
-   % ~ & 50 & \textbf{25} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.5 & 12.4 & -259.0 & -243.1 & -224.0  \\
-    ~ & 50 & \textbf{50} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.7 & 11.2 & 11.9 & -259.0 & -252.4 & -245.0 \\
-    %~ & 50 & \textbf{75} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 11.8 & -257.0 & -247.3 & -238.0  \\
-    ~ & 50 & \textbf{100} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -262.0 & -253.3 & -246.0  \\
-    ~ & 50 & \textbf{125} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & \textbf{11.1} & \textbf{11.2} & \textbf{11.6} & \textbf{-265.0} & \textbf{-254.9} & \textbf{-246.0}  \\
-    ~ & 50 & \textbf{150} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.6 & -265.0 & -254.9 & -246.0  \\
-    ~ & 50 & \textbf{200} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & 10.9 & 11.2 & 11.4 & -262.0 & -253.7 & -247.0  \\
+    3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    \hline
+    4 & \textbf{10} & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    \hline
+    5 & 50 & \textbf{1} & 10\% & 0.01 & 0.1 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     6 & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{0\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{1\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
@@ -165,24 +135,8 @@
     ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
     ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~  \\
     ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%} & ~ & ~ & ~ & ~ & ~ & ~  \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{12\%} & 10.9 & 11.2 & 11.5 & -256.6 & -248.6 & -239.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{17\%} & 11.0 & 11.5 & 11.8 & -250.0 & -245.0 & -237.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & 10.9 & 11.4 & 11.7 & -257.0 & -246.0 & -239.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & 11.1 & 11.4 & 11.7 & -255.0 & -242.6 & -233.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{75\%} & 11.2 & 11.4 & 11.8 & -258.0 & -245.4 & -237.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{90\%} & 11.1 & 11.5 & 11.8 & -252.0 & -241.8 & -235.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
-    7 & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & 10.9 & 11.3 & 11.8 & -257.0 & -248.5 & -240.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{5\%} & 10\% & 11.2 & 11.4 & 11.6 & -255.0 & -245.9 & -236.0 \\
-   % ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & \textbf{10\%} & 10\% & \textbf{10.7} & \textbf{11.2} & \textbf{11.9} & \textbf{-259.0} & \textbf{-252.4} & \textbf{-245.0} \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{25\%} & 10\% & 11.0 & 11.4 & 11.7 & -260.0 & -243.6 & -238.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.4 & 11.7 & -260.0 & -250.3 & -240.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{90\%} & 10\% & 11.0 & 11.3 & 11.5 & -255.0 & -244.0 & -229.0 \\
-    %~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{75\%} & 10\% & 11.2 & 11.5 & 12.0 & -260.0 & -243.9 & -234.0 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & \textbf{100\%} & 10\% & 11.0 & 11.3 & 11.7 & -257.0 & -250.3 & -240.0 \\
+    7 & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
