--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -120,7 +120,7 @@
     1 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.025} & 10\% & 10\% & 10\% & 11.1 & 11.3 & 11.6 & -274.42 & -264.56 & -255.75 \\
     ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.05} & 10\% & 10\% & 10\% & 11.0 & 11.4 & 11.7 & -276.74 & -269.38 & -257.73 \\
     ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.1} & 10\% & 10\% & 10\% & 10.8 & 11.2 & 11.8 & -273.98 & -264.20 & -250.51 \\
-    ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.7 & -274.36 & -266.87 & -253.59 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.1} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.7 & -274.36 & -266.87 & -253.59 \\
     ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10\% & 10\% & 10.7 & 11.3 & 11.6 & -277.71 & -269.27 & -256.79 \\
     ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.9} & 10\% & 10\% & 10\% & 11.0 & 11.4 & 12.2 & -276.64 & -267.40 & -255.33 \\
     ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.7 & -280.05 & -272.60 & -265.57 \\
@@ -132,32 +132,36 @@
     ~ & 50 & 50 & \textbf{90\%} & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.3 & 11.7 & -278.16 & -268.93 & -260.16 \\
     ~ & 50 & 50 & \textbf{99\%} & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.4 & 12.2 & -277.68 & -269.10 & -253 \\
     \hline
-    3 & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{1\%} & 10\% & 10\% & 10.9 & 11.3 & 11.7 & -276.58 & -267.93 & -258.56 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{10\%} & 10\% & 10\% & 11.1 & 11.4 & 11.5 & -273.50 & -267.03 & -258.85 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{25\%} & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -276.52 & -269.01 & -264.05 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{50\%} & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -276.45 & -269.85 & -263.19 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & \textbf{90\%} & 10\% & 10\% & 10.9 & 11.3 & 11.8 & -276.49 & -269.80 & -261.10 \\
+    3 & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{1\%} & 10\% & 10\% & 10.9 & 11.3 & 11.7 & -276.58 & -267.93 & -258.56 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{10\%} & 10\% & 10\% & 11.1 & 11.4 & 11.5 & -273.50 & -267.03 & -258.85 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{25\%} & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -276.52 & -269.01 & -264.05 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{50\%} & 10\% & 10\% & 11.1 & 11.4 & 11.6 & -276.45 & -269.85 & -263.19 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{90\%} & 10\% & 10\% & 10.9 & 11.3 & 11.8 & -276.49 & -269.80 & -261.10 \\
     \hline
-    4 & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{0\%} & 10.8 & 11.2 & 11.5 & -279.01 & -272.04 & -263.72 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{1\%} & 11.1 & 11.4 & 12.1 & -276.04 & -266.46 & -251.83 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{5\%} & 11.0 & 11.3 & 11.9 & -272.18 & -266.83 & -255.81 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & 10.9 & 11.2 & 11.4 & -278.8 & -269.17 & -253.88 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & 11.0 & 11.5 & 11.9 & -272.34 & -265.37 & -255.90 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & 11.1 & 11.4 & 11.7 & -276.24 & -266.51 & -256.13 \\
-    ~ & 50 & 50 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
+    4 & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{0\%} & 10.9 & 11.4 & 12.0 & -276.38 & -267.73 & -260.24 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{1\%} & 11.1 & 11.4 & 12.1 & -276.04 & -266.46 & -251.83 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{5\%} & 11.0 & 11.3 & 11.9 & -272.18 & -266.83 & -255.81 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{10\%} & 10.9 & 11.2 & 11.4 & -278.8 & -269.17 & -253.88 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{25\%} & 11.0 & 11.5 & 11.9 & -272.34 & -265.37 & -255.90 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{50\%} & 11.1 & 11.4 & 11.7 & -276.24 & -266.51 & -256.13 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & \textbf{100\%$^*$} & - & - & - & - & - & - \\
     \hline
-    5 & 50 & 10\% & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & 11.0 & 11.3 & 11.6 & -279.00 & -267.42 & -243.55 \\
-    ~ & 50 & 10\% & 10\% & 0.01 & 0.1 & 10\% & \textbf{1\%} & 10\% & 11.1 & 11.4 & 11.6 & -273.34 & -267.77 & -248.43 \\
+    5 & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{0\%} & 10\% & 11.0 & 11.3 & 11.6 & -279.00 & -267.42 & -243.55 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{1\%} & 10\% & 11.1 & 11.4 & 11.6 & -273.34 & -267.77 & -248.43 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{5\%} & 10\% & 10.9 & 11.2 & 11.5 & -280.67 & -271.39 & -262.82\\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{10\%} & 10\% & 10.7 & 11.2 & 11.6 & -278.55 & -270.87 & -258.91 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{25\%} & 10\% & 10.9 & 11.4 & 11.9 & -275.14 & -269.32 & -261.14 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.5 & 11.7 & -278.22 & -268.78 & -61.99 \\
     \hline
-    6 & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{0\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{1\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{5\%} &  ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{10\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{25\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~  \\
-    ~ & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & 10\% & \textbf{100\%} & ~ & ~ & ~ & ~ & ~ & ~  \\
+    6 & 50 & 1 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.2 & 11.9 & 12.8 & -266.57 & -212.63 & -156.75 \\
+    ~ & 50 & 10 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.6 & 12.3 & -273.24 & -251.40 & -226.23 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% &  11.1 & 11.4 & 11.8 & -269.13 & -265.38 & -262.25 \\
+    ~ & 50 & 100 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.1 & 11.6 & -282.02 & -273.85 & -267.44 \\
+    ~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
     \hline
-    7 & 50 & 125 & 10\% & 0.01 & 0.1 & 10\% & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    7 & 50 & 125 & 10\% & 0.1 & 0.5 & 10\% & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
