--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -153,15 +153,21 @@
     ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{25\%} & 10\% & 10.9 & 11.4 & 11.9 & -275.14 & -269.32 & -261.14 \\
     ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & \textbf{50\%} & 10\% & 11.1 & 11.5 & 11.7 & -278.22 & -268.78 & -61.99 \\
     \hline
-    6 & 50 & 1 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.2 & 11.9 & 12.8 & -266.57 & -212.63 & -156.75 \\
-    ~ & 50 & 10 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.6 & 12.3 & -273.24 & -251.40 & -226.23 \\
-    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% &  11.1 & 11.4 & 11.8 & -269.13 & -265.38 & -262.25 \\
-    ~ & 50 & 100 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.1 & 11.6 & -282.02 & -273.85 & -267.44 \\
-    ~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    6 & 50 & \textbf{1} & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.2 & 11.9 & 12.8 & -266.57 & -212.63 & -156.75 \\
+    ~ & 50 & \textbf{10} & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.6 & 12.3 & -273.24 & -251.40 & -226.23 \\
+    ~ & 50 & \textbf{50} & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% &  11.1 & 11.4 & 11.8 & -269.13 & -265.38 & -262.25 \\
+    ~ & 50 & \textbf{100} & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.7 & 11.1 & 11.6 & -282.02 & -273.85 & -267.44 \\
+    ~ & 50 & \textbf{125} & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.8 & 11.2 & 11.6 & -280.48 & -273.03 & -265.25 \\
     ~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
-    ~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & \textbf{200} & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
     \hline
-    7 & 50 & 125 & 10\% & 0.1 & 0.5 & 10\% & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    7 & \textbf{10$^*$} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & - & - & - & - & - & - \\
+    ~ & \textbf{25$^*$} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & - & - & - & - & - & - \\
+    ~ & \textbf{50} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 10.9 & 11.3 & 11.7 & -272.82 & -269.54 & -265.51 \\
+    ~ & \textbf{100} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.7 & -279.14 & -271.87 & -266.79 \\
+    ~ & \textbf{150} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.3 & 11.6 & -278.54 & -273.36 & -266.08 \\
+    ~ & \textbf{200} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.7 & -279.25 & -272.78 & -265.13 \\
+    
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
