--- a/thesis/appendices/allPMResults.tex
+++ b/thesis/appendices/allPMResults.tex
@@ -162,7 +162,6 @@
     ~ & \textbf{100} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.7 & -279.14 & -271.87 & -266.79 \\
     ~ & \textbf{150} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.1 & 11.3 & 11.6 & -278.54 & -273.36 & -266.08 \\
     ~ & \textbf{200} & 50 & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & 11.0 & 11.3 & 11.7 & -279.25 & -272.78 & -265.13 \\
-    
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment} 
@@ -177,4 +176,62 @@
     %\item[$^i$:] Testing values that gave next best results
     \end{itemize}
     \label{table:parameterSettings}
+\end{table}
+
+\begin{table}
+    %\centering
+    \hspace*{-2cm}
+    \begin{tabular}{|l|l|l|l|l|l|l||c|c|c|c|c|c|c|}
+    \hline
+    ~ & $s$ & $i$ & $p_{e}$ & $p_{v}$ & $p_{b}$ & $BR$ & $A^b$ & $A^a$ & $A^w$ & $T^b$ & $T^a$ & $T^w$\\
+    \hline
+    1 & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.025} & 10\% & 11.1 & 11.3 & 11.6 & -274.42 & -264.56 & -255.75 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.05} & 10\% & 11.0 & 11.4 & 11.7 & -276.74 & -269.38 & -257.73 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.01} & \textbf{0.1} & 10\% & 10.8 & 11.2 & 11.8 & -273.98 & -264.20 & -250.51 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.1} & \textbf{0.5} & 10\% & 10.9 & 11.3 & 11.7 & -274.36 & -266.87 & -253.59 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.5} & 10\% & 10.7 & 11.3 & 11.6 & -277.71 & -269.27 & -256.79 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.5} & \textbf{0.9} & 10\% & 11.0 & 11.4 & 12.2 & -276.64 & -267.40 & -255.33 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.9} & \textbf{0.9} & 10\% & 10.9 & 11.3 & 11.7 & -280.05 & -272.60 & -265.57 \\
+    \hline
+    2 & 50 & 50 & \textbf{1\%} & 0.1 & 0.5 & 10\% & 11.1 & 11.4 & 11.7 & -277.78 & -268.62 & -260.23 \\
+    ~ & 50 & 50 & \textbf{10\%} & 0.1 & 0.5 & 10\% & 10.9 & 11.4 & 11.7 & -276.64 & -269.86 & -260.24 \\
+    ~ & 50 & 50 & \textbf{25\%} & 0.1 & 0.5 & 10\% &  \textbf{10.8} & \textbf{11.3} & \textbf{11.6} & \textbf{-274.76} & \textbf{-270.52} & \textbf{-265.57} \\
+    ~ & 50 & 50 & \textbf{50\%} & 0.1 & 0.5 & 10\% &  11.2 & 11.4 & 11.6 & -277.01 & -268.39 & -256.84 \\
+    ~ & 50 & 50 & \textbf{90\%} & 0.1 & 0.5 & 10\% & 10.7 & 11.3 & 11.7 & -278.16 & -268.93 & -260.16 \\
+    ~ & 50 & 50 & \textbf{99\%} & 0.1 & 0.5 & 10\% & 11.1 & 11.4 & 12.2 & -277.68 & -269.10 & -253 \\
+    \hline
+    3 & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{1\%} & 10.9 & 11.3 & 11.7 & -276.58 & -267.93 & -258.56 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{10\%} & 11.1 & 11.4 & 11.5 & -273.50 & -267.03 & -258.85 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{25\%} & 11.1 & 11.4 & 11.6 & -276.52 & -269.01 & -264.05 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{50\%} & 11.1 & 11.4 & 11.6 & -276.45 & -269.85 & -263.19 \\
+    ~ & 50 & 50 & 10\% & 0.1 & 0.5 & \textbf{90\%} &10.9 & 11.3 & 11.8 & -276.49 & -269.80 & -261.10 \\
+    \hline
+    4 & 50 & \textbf{1} & 10\% & 0.1 & 0.5 & 10\% &11.2 & 11.9 & 12.8 & -266.57 & -212.63 & -156.75 \\
+    ~ & 50 & \textbf{10} & 10\% & 0.1 & 0.5 & 10\% & 10.9 & 11.6 & 12.3 & -273.24 & -251.40 & -226.23 \\
+    ~ & 50 & \textbf{50} & 10\% & 0.1 & 0.5 & 10\% &  11.1 & 11.4 & 11. & -269.13 & -265.38 & -262.25 \\
+    ~ & 50 & \textbf{100} & 10\% & 0.1 & 0.5 & 10\% & 10.7 & 11.1 & 11.6 & -282.02 & -273.85 & -267.44 \\
+    ~ & 50 & \textbf{125} & 10\% & 0.1 & 0.5 & 10\% & 10.8 & 11.2 & 11.6 & -280.48 & -273.03 & -265.25 \\
+    %~ & 50 & ~ & 10\% & 0.1 & 0.5 & 10\% & 10\% & 10\% & ~ & ~ & ~ & ~ & ~ & ~  \\
+    ~ & 50 & \textbf{200} & 10\% & 0.1 & 0.5 & 10\% & 11.0 & 11.2 & 11.4 & -280.15 & -275.64 & -272.12  \\
+    \hline
+    5 & \textbf{10$^*$} & 50 & 10\% & 0.1 & 0.5 & 10\% & - & - & - & - & - & - \\
+    ~ & \textbf{25$^*$} & 50 & 10\% & 0.1 & 0.5 & 10\% & - & - & - & - & - & - \\
+    ~ & \textbf{50} & 50 & 10\% & 0.1 & 0.5 & 10\% &10.9 & 11.3 & 11.7 & -272.82 & -269.54 & -265.51 \\
+    ~ & \textbf{100} & 50 & 10\% & 0.1 & 0.5 & 10\% & 11.0 & 11.3 & 11.7 & -279.14 & -271.87 & -266.79 \\
+    ~ & \textbf{150} & 50 & 10\% & 0.1 & 0.5 & 10\% & 11.1 & 11.3 & 11.6 & -278.54 & -273.36 & -266.08 \\
+    ~ & \textbf{200} & 50 & 10\% & 0.1 & 0.5 & 10\% & 11.0 & 11.3 & 11.7 & -279.25 & -272.78 & -265.13 \\
+    \hline
+    \end{tabular}
+    \caption {Steps with the corresponding results from the parameter settings experiment (part 1)}
+    \tiny
+    \begin{itemize}[noitemsep]
+    \item[$A^b$:] best $ATT$ value
+    \item[$A^a$:] average $ATT$ value
+    \item[$A^w$:] worst $ATT$ value
+    \item[$T^b$:] best $TOTFIT$ value (best possible $TOTFIT$ value: -315)
+    \item[$T^a$:] average $TOTFIT$ value
+    \item[$T^w$:] worst $TOTFIT$ value
+    \item[$^*$:] No ants satisfied the initial demands, \emph{\color{blue} TODO: initial demands: }
+    \end{itemize}
+    \label{table:pm1}
 \end{table}
