--- a/thesis/Report.tex
+++ b/thesis/Report.tex
@@ -16,7 +16,7 @@
 \usepackage{tabularx}
 \usepackage[section]{placeins}
 \usepackage{mathtools}
-%\usepackage{amsmath}
+\usepackage{amsmath}
 \usepackage[]{algorithm2e}
 %\usepackage[center]					% For cropping documents
 \usepackage{titlesec}
