--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -77,8 +77,8 @@
     ~ & 10\% & \textbf{1\%} & 10.9 & 11.4 & 11.9 & 0.056 & 11.409 $\pm$ 0.016 & -280.49 & -268.30 & -253.77 & 31.612 & -268.299 $\pm$ 8.762\\
     ~ & 10\% & \textbf{5\%} & 10.9 & 11.4 & 11.9 & 0.060 & 11.387 $\pm$ 0.017 & -280.80 & -267.86 & -258.59 & 24.750 & -267.865 $\pm$ 6.860\\
     ~ & 10\% & \textbf{10\%} & 10.8 & 11.3 & 12.0 & 0.059 & 11.305 $\pm$ 0.016 & -283.30 & -268.43 & -248.18 & 47.765 & -268.428 $\pm$ 13.240 \\
-    ~ & 10\% & \textbf{25\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & 10\% & \textbf{50\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 10\% & \textbf{25\%} & 10.9 & 11.4 & 12.3 & 0.065 & 11.350 $\pm$ 0.018 & -279.25 & -269.06 & -251.19 & 31.626 & -269.063 $\pm$ 8.766 \\
+    ~ & 10\% & \textbf{50\%} & 10.8 & 11.4 & 12.1 & 0.071 & 11.385 $\pm$ 0.020 & -279.96 & -267.75 & -248.43 & 56.324 & -267.749 $\pm$ 15.613\\
     ~ & 10\% & \textbf{100\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
     2 & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
