model + results fa

--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -81,8 +81,10 @@
     ~ & 10\% & \textbf{50\%} & 10.8 & 11.4 & 12.1 & 0.071 & 11.385 $\pm$ 0.020 & -279.96 & -267.75 & -248.43 & 56.324 & -267.749 $\pm$ 15.613\\
     ~ & 10\% & \textbf{100\%} & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
     \hline
-    2 & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
-    ~ & \textbf{0\%} & 10\% & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ & ~ \\
+    2 & \textbf{0\%} & 10\% & 10.9 & 11.3 & 12.0 & 0.066 & 11.349 $\pm$ 0.018 & -282.59 & -269.04 & -248.81 & 45.923 & -269.043 $\pm$ 12.729 \\
+    ~ & \textbf{1\%} & 10\% & 10.9 & 11.3 & 12.3 & 0.080 & 11.329 $\pm$ 0.022 & -279.38 & -269.66 & -250.46 & 57.360 & -268.659 $\pm$ 15.899 \\
+    ~ & \textbf{5\%} & 10\% & 10.7 & 11.3 & 11.7 & 0.050 & 11.323 $\pm$ 0.014 & -280.41 & -267.88 & -248.17 & 38.070 & -267.885 $\pm$ 10.553 \\
+    ~ & \textbf{10\%} & 10\% & 10.8 & 11.3 & 12.6 & 0.082 & 11.348 $\pm$ 0.023 & -282.66 & -268.66 & -246.45 & 48.454 & -268.659 $\pm$ 13.431 \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the parameter settings experiment (CA FA)}
