model + pb results

--- a/thesis/appendices/allPMResults.tex
+++ b/thesis/appendices/allPMResults.tex
@@ -235,3 +235,14 @@
     \end{itemize}
     \label{table:pm1}
 \end{table}
+
+% OLD PV OG PB verdier
+  \hline
+    1 & 50 & 50 & 10\% &  \textbf{0.025} & 10\% & 11.1 & 11.3 & 11.6 & -274.42 & -264.56 & -255.75 \\
+    ~ & 50 & 50 & 10\% &  \textbf{0.05} & 10\% & 11.0 & 11.4 & 11.7 & -276.74 & -269.38 & -257.73 \\
+    ~ & 50 & 50 & 10\% &  \textbf{0.1} & 10\% & 10.8 & 11.2 & 11.8 & -273.98 & -264.20 & -250.51 \\
+    ~ & 50 & 50 & 10\% &  \textbf{0.5} & 10\% & 10.9 & 11.3 & 11.7 & -274.36 & -266.87 & -253.59 \\
+    ~ & 50 & 50 & 10\% &  \textbf{0.5} & 10\% & 10.7 & 11.3 & 11.6 & -277.71 & -269.27 & -256.79 \\
+    ~ & 50 & 50 & 10\% &  \textbf{0.9} & 10\% & 11.0 & 11.4 & 12.2 & -276.64 & -267.40 & -255.33 \\
+    ~ & 50 & 50 & 10\% &  \textbf{0.9} & 10\% & 10.9 & 11.3 & 11.7 & -280.05 & -272.60 & -265.57 \\
+    \hline
