--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -88,7 +88,7 @@
     ~ & \textbf{5\%} & 10\% & 10.7 & 11.3 & 11.7 & 0.050 & 11.323 $\pm$ 0.014 & -280.41 & -267.88 & -248.17 & 38.070 & -267.885 $\pm$ 10.553 \\
     ~ & \textbf{10\%} & 10\% & 10.8 & 11.3 & 12.6 & 0.082 & 11.348 $\pm$ 0.023 & -282.66 & -268.66 & -246.45 & 48.454 & -268.659 $\pm$ 13.431 \\
     ~ & \textbf{25\%} & 10\% & 10.7 & 11.4 & 12.4 & 0.077 & 11.416 $\pm$ 0.021 & -280.21 & -266.76 & -247.99 & 52.953 & -266.756 $\pm$ 14.678 \\
-    ~ & \textbf{50\%} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~ \\
+    ~ & \textbf{50\%} & 10\% & 10.8 & 11.3 & 12.0 & 0.068 & 11.349 $\pm$ 0.019 & -279.32 & -268.26 & -243.23 & 37.675 & -268.263 $\pm$ 10.443 \\
     ~ & \textbf{100\%} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~ \\
     \hline
     \end{tabular}
