--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -16,24 +16,24 @@
     ~ & 50 & 50 & 10\% & \textbf{0.1} & 10\% & 10.5 & 11.18 $\pm$ 0.053 $\sigma$=0.086 & 11.7 & -280.65 & -272.499 $\pm$ 16.744 $\sigma$=27.015 & -264.30 \\
     ~ & 50 & 50 & 10\% & \textbf{0.3} & 10\% & 11.0 & 11.28 $\pm$ 0.021 $\sigma$=0.033 & 11.7 & -278.29 & -271.310 $\pm$ 10.017 $\sigma$=16.161 & -265.25 \\
     ~ & 50 & 50 & 10\% & \textbf{0.5} & 10\% & 10.9 & 11.41 $\pm$ 0.033 $\sigma$=0.053 & 11.7 & -273.39 & -267.431 $\pm$ 11.972 $\sigma$=19.316 & -259.79\\
-    ~ & 50 & 50 & 10\% & \textbf{0.7} & 10\% & 10.8 & 11.33 $\pm$ -0.048 $\sigma$=0.078 & 11.9 & -280.28 & -266.936 $\pm$ 39.679 $\sigma$=64.019 & -251.02\\
-    ~ & 50 & 50 & 10\% & \textbf{0.9} & 10\% & 10.8 & 11.09 $\pm$ 0.017 $\sigma$=0.027 & 11.4 & -277.48 & -271.79 $\pm$ -15.461 $\sigma$=24.944 & -259.402 \\
+    ~ & 50 & 50 & 10\% & \textbf{0.7} & 10\% & 10.8 & 11.33 $\pm$ 0.048 $\sigma$=0.078 & 11.9 & -280.28 & -266.936 $\pm$ 39.679 $\sigma$=64.019 & -251.02\\
+    ~ & 50 & 50 & 10\% & \textbf{0.9} & 10\% & 10.8 & 11.09 $\pm$ 0.017 $\sigma$=0.027 & 11.4 & -277.48 & -271.79 $\pm$ 15.461 $\sigma$=24.944 & -259.402 \\
     \hline
     2 & 50 & 50 & \textbf{1\%} & 0.5 & 10\% & 11.1 & 11.4 & 11.7 & -277.78 & -268.62 & -260.23 \\
     ~ & 50 & 50 & \textbf{10\%} & 0.5 & 10\% & 10.9 & 11.4 & 11.7 & -276.64 & -269.86 & -260.24 \\
     ~ & 50 & 50 & \textbf{25\%} & 0.5 & 10\% &  \textbf{10.8} & \textbf{11.3} & \textbf{11.6} & \textbf{-274.76} & \textbf{-270.52} & \textbf{-265.57} \\
     ~ & 50 & 50 & \textbf{50\%} & 0.5 & 10\% &  11.2 & 11.4 & 11.6 & -277.01 & -268.39 & -256.84 \\
     ~ & 50 & 50 & \textbf{90\%} & 0.5 & 10\% & 10.7 & 11.3 & 11.7 & -278.16 & -268.93 & -260.16 \\
-    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & \textbf{75\%} & 0.5 & 10\% & 10.8 & 11.273 $\pm$ 0.057 $\sigma$=0.093 & -274.82 & -269.65 & -269.653 $\pm$ 6.157 $\sigma$=9.935 & -264.32 \\
     ~ & 50 & 50 & \textbf{99\%} & 0.5 & 10\% & 11.1 & 11.4 & 12.2 & -277.68 & -269.10 & -253 \\
     \hline
     3 & 50 & 50 & 10\% & 0.5 & \textbf{1\%} & 10.9 & 11.3 & 11.7 & -276.58 & -267.93 & -258.56 \\
     ~ & 50 & 50 & 10\% & 0.5 & \textbf{10\%} & 11.1 & 11.4 & 11.5 & -273.50 & -267.03 & -258.85 \\
     ~ & 50 & 50 & 10\% & 0.5 & \textbf{25\%} & 11.1 & 11.4 & 11.6 & -276.52 & -269.01 & -264.05 \\
     ~ & 50 & 50 & 10\% & 0.5 & \textbf{50\%} & 11.1 & 11.4 & 11.6 & -276.45 & -269.85 & -263.19 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.5 & \textbf{75\%} & 10.7 & 11.260 $\pm$ 0.049 $\sigma$=0.079 & 11.8 & -275.99 & -271.031 $\pm$ 10.527 $\sigma$=16.985 & -262.35 \\
     ~ & 50 & 50 & 10\% & 0.5 & \textbf{90\%} & 10.9 & 11.3 & 11.8 & -276.49 & -269.80 & -261.10 \\
-    ~ & 50 & 50 & 10\% & 0.5 & \textbf{9\%} & ~ & ~ & ~ & ~ & ~ & ~ \\
+    ~ & 50 & 50 & 10\% & 0.5 & \textbf{99\%} & 11.1 & 11.293 $\pm$ 0.024 $\sigma$=0.039 & 11.7 & -277.29 & -270.120 $\pm$ 11.689 $\sigma$=18.859 & -263.73 \\
     \hline
     4 & 50 & \textbf{1} & 10\% & 0.5 & 10\% &11.2 & 11.9 & 12.8 & -266.57 & -212.63 & -156.75 \\
     ~ & 50 & \textbf{10} & 10\% & 0.5 & 10\% & 10.9 & 11.6 & 12.3 & -273.24 & -251.40 & -226.23 \\
@@ -73,7 +73,7 @@
     \hspace*{-0.5cm}
     \begin{tabular}{|l|l|l||c|c|c|c|c|c|c|c|c|c|}
     \hline
-    ~ & $FA$ & $CA$ & $b_{(ATT)}$ & $a_{(ATT)}$ & $w_{(ATT)}$ & $\sigma_{(ATT)}$ & $CI_{(ATT)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
+    ~ & $AF$ & $CA$ & $b_{(ATT)}$ & $a_{(ATT)}$ & $w_{(ATT)}$ & $\sigma_{(ATT)}$ & $CI_{(ATT)}$ & $b_{(TF)}$ & $a_{(TF)}$ & $w_{(TF)}$ & $\sigma_{(TF)}$ & $CI_{(TF)}$\\
     \hline
     1 & 10\% & \textbf{0\%} & 10.8 & 11.3 & 12.1 & 0.057 & 11.335 $\pm$ 0.016 & -280.95 & -267.42 & -246.46 & 38.403 & -267.420 $\pm$ 10.644\\
     ~ & 10\% & \textbf{1\%} & 10.9 & 11.4 & 11.9 & 0.056 & 11.409 $\pm$ 0.016 & -280.49 & -268.30 & -253.77 & 31.612 & -268.299 $\pm$ 8.762\\
@@ -92,7 +92,7 @@
     ~ & \textbf{100\%} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~ \\
     \hline
     \end{tabular}
-    \caption {Steps with the corresponding results from the CA and FA parameter settings experiment}
+    \caption {Steps with the corresponding results from the CA and AF parameter settings experiment}
     \tiny
     \begin{itemize}[noitemsep]
     \item[$b_{(ATT)}$:] best $ATT$ value
