--- a/thesis/appendices/experimentsResultsAppendix.tex
+++ b/thesis/appendices/experimentsResultsAppendix.tex
@@ -89,7 +89,7 @@
     ~ & \textbf{10\%} & 10\% & 10.8 & 11.3 & 12.6 & 0.082 & 11.348 $\pm$ 0.023 & -282.66 & -268.66 & -246.45 & 48.454 & -268.659 $\pm$ 13.431 \\
     ~ & \textbf{25\%} & 10\% & 10.7 & 11.4 & 12.4 & 0.077 & 11.416 $\pm$ 0.021 & -280.21 & -266.76 & -247.99 & 52.953 & -266.756 $\pm$ 14.678 \\
     ~ & \textbf{50\%} & 10\% & 10.8 & 11.3 & 12.0 & 0.068 & 11.349 $\pm$ 0.019 & -279.32 & -268.26 & -243.23 & 37.675 & -268.263 $\pm$ 10.443 \\
-    ~ & \textbf{100\%} & 10\% & ~ & ~ & ~ & ~ & ~ $\pm$ ~ & ~ & ~ & ~ & ~ & ~ $\pm$ ~ \\
+    ~ & \textbf{100\%} & 10\% & 10.8 & 11.3 & 12.0 & 0.059 & 11.337 $\pm$ 0.016 & -278.45 & -267.91 & -252.14 & 41.691 & -267.914 $\pm$ 11.556 \\
     \hline
     \end{tabular}
     \caption {Steps with the corresponding results from the CA and AF parameter settings experiment}
