--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -1,3 +1,20 @@
+@article{alnaser12,
+    author    = "As’ad Mahmoud Alnaser and Omar AlHeyasat and Ashraf Abdel-Karim Abu-Ein and Hazem (Moh’d Said) Hatamleh and Ahmed A. M. Sharadqeh",
+    title     = "Time Comparing between Java and C++ Software",
+    journal   = "Journal of Software Engineering and Applications",
+    pages     = "630-633",
+    year      = "2012",
+}
+
+@unpublished{sestoft10,
+    author  = "Peter Sestoft",
+    title   = "Numeric performance in C, C# and Java",
+    school = "IT University of Copenhagen",
+    year   = "2010",
+    month  = "February",
+    note    = "\url{https://www.itu.dk/people/sestoft/papers/numericperformance.pdf}",
+}
+
 @article{cohen88,
     author    = "Paul R. Cohen and Adele E. Howe",
     title     = "How Evaluation Guides AI Research",
