now not breaking

--- a/thesis/bibl.bib
+++ b/thesis/bibl.bib
@@ -8,7 +8,7 @@
 
 @unpublished{sestoft10,
     author  = "Peter Sestoft",
-    title   = "Numeric performance in C, C# and Java",
+    title   = "Numeric performance in C, C\# and Java",
     school = "IT University of Copenhagen",
     year   = "2010",
     month  = "February",
